<resources>
    <string name="app_name">TallerUnimag1</string>
    <string name="Bienvenido">Bienvenidos</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="ingresar">Ingresar</string>
    <string name="cancelar">Cancelar</string>
    <string name="Operaciones">Operaciones</string>
    <string name="dato1">Numero 1</string>
    <string name="dato2">Numero 2</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="division">Division</string>
    <string name="mcm">MCM</string>
    <string name="mcd">MCD</string>
    <string name="mayor">Mayor</string>
</resources>